<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/button_background_lavendar_color"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".HodorLoginActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="38dp"
        android:layout_marginBottom="20dp"
        android:text="@string/register_handle"
        android:textSize="36sp" 
        android:textColor = "#fff"/>

    <LinearLayout
        android:id="@+id/editBoxLinearLayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/textView1"
        android:orientation="vertical"
         >

        <EditText
            android:id="@+id/userName"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center"
            android:textColor = "#fff"
            android:hint = "@string/login_hint"
            android:inputType="text|textNoSuggestions|textVisiblePassword" 
            android:textColorHint="#FFFFFF"
            android:padding="25dp"
            android:digits="0,1,2,3,4,5,6,7,8,9,*,A,B,C,D,E,F,G,H,I,J,K,L,M,N,O,P,Q,R,S,T,U,V,W,X,Y,Z,a,b,c,d,e,f,g,h,i,j,k,l,m,n,o,p,q,r,s,t,u,v,w,x,y,z"
            >

            <requestFocus />
        </EditText>

        <TextView
	        android:id="@+id/errortextView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingTop="20dp"
	        android:textSize="28sp" 
	        />
        
		<LinearLayout
			    android:layout_width="fill_parent"
			    android:layout_height="wrap_content"
			    android:orientation="vertical"
		        android:id="@+id/loginlinearLayout"
			    >    
	       <Button
		      android:id="@+id/cancel_login_button"
		      style="@style/ButtonAppTheme"
		      android:layout_width="fill_parent"
		      android:layout_height="wrap_content"
		      android:text="@string/cancel_login_buttontext"
		      android:textSize="28sp"
		      android:gravity="center"
		      android:layout_gravity="right"
		      android:layout_weight = "1"
		      android:textColor="#fff" 
		      android:background="@color/button_background_gray_color"
	 		  android:focusable="false"
			  android:focusableInTouchMode="false"
			  />

       	</LinearLayout>
    </LinearLayout>


    
</RelativeLayout>